Remove unsupported UseConcMarkSweepGC